[project]
name = "llm-router"
version = "0.1.0"
description = "LLM router to assist in integrating multiple different LLM service providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.9",
    "pydantic>=2.10.5",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

#################################################
# Ruff config
#################################################
[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py37"
exclude = ["grpc_py_gen", "grpc_go_gen"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "I", # isort
    "B", # bugbear rules
    "F401", # remove unused imports
    "E722", # bare except statements
    "ARG", # unused arguments
    "T201", # print statements
    "T203",
    "TC004", # misuse of typing.TYPE_CHECKING
    "TID251", # import rules
]
ignore = [
    # mutable defaults
    "B006",
]
unfixable = [
    # disable auto fix for print statements
    "T201",
    "T203",
]

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["tests"]
